--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "json-server": "^0.16.1",
-    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "redux": "^4.0.5",
-    "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.0"
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
